[package]
name = "lmy"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
